--- a/package.json
+++ b/package.json
@@ -16,15 +16,14 @@
     {
       "name": "portfolio",
       "title": "Portfolio Tracker",
-      "subtitle": "Portfolio Tracker",
-      "description": "View your investment portfolio and track net worth",
+      "description": "Track value of your Stocks, ETFs, Properties, Cash, Debt and Crypto with automatic price updates over time",
       "mode": "view"
     },
     {
       "name": "search-investments",
       "title": "Search Investments",
       "subtitle": "Portfolio Tracker",
-      "description": "Search for stocks, ETFs, and funds to add to your portfolio",
+      "description": "Search for stocks ETFs, and funds to add to your portfolio",
       "mode": "view"
     },
     {
@@ -36,9 +35,9 @@
     },
     {
       "name": "import-export",
-      "title": "Import / Export Portfolio",
+      "title": "Import/Export Portfolio",
       "subtitle": "Portfolio Tracker",
-      "description": "Export your portfolio to CSV or import positions from a CSV file",
+      "description": "Export/Import your portfolio to CSV for backup, manual editing or as snapshots",
       "mode": "view"
     }
   ],
@@ -83,7 +82,7 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.104.6",
+    "@raycast/api": "^1.104.7",
     "@raycast/utils": "^1.17.0",
     "yahoo-finance2": "^3.13.0"
   },
