--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "portfolio-tracker",
   "title": "Portfolio Tracker",
-  "description": "Track your investment portfolio and net worth in real time across multiple accounts",
+  "description": "Track value of your Stocks, ETFs, Properties, Cash, Debt and Crypto with automatic price updates over time to see your net worth",
   "icon": "extension-icon.png",
   "author": "filipawaits",
   "platforms": [
@@ -16,7 +16,7 @@
     {
       "name": "portfolio",
       "title": "Portfolio Tracker",
-      "description": "Track value of your Stocks, ETFs, Properties, Cash, Debt and Crypto with automatic price updates over time",
+      "description": "Track your investment portfolio and net worth across multiple accounts",
       "mode": "view"
     },
     {
